--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,17 @@ comtypes==1.4.2
 dominate==2.9.1
 Flask==3.0.3
 Flask-Bootstrap==3.3.7.1
+Flask-Login==0.6.3
 flask-marshmallow==1.2.1
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 greenlet==3.0.3
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 marshmallow==3.21.2
 packaging==24.0
+PyMySQL==1.1.1
 pypiwin32==223
 pyttsx3==2.90
 pywin32==306
@@ -20,3 +23,4 @@ SQLAlchemy==2.0.30
 typing_extensions==4.12.1
 visitor==0.1.3
 Werkzeug==3.0.3
+WTForms==3.1.2
