--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 blinker==1.8.2
 click==8.1.7
 colorama==0.4.6
-comtypes==1.4.2
+comtypes==1.4.5
 dominate==2.9.1
-Flask==3.0.3
+Flask==2.3.3
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.3
 flask-marshmallow==1.2.1
@@ -13,14 +13,21 @@ greenlet==3.0.3
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
-marshmallow==3.21.2
-packaging==24.0
+marshmallow==3.21.3
+numpy==2.0.1
+packaging==24.1
+pandas==2.2.2
 PyMySQL==1.1.1
 pypiwin32==223
+python-dateutil==2.9.0.post0
 pyttsx3==2.90
+pytz==2024.1
 pywin32==306
-SQLAlchemy==2.0.30
-typing_extensions==4.12.1
+six==1.16.0
+SQLAlchemy==2.0.31
+typing_extensions==4.12.2
+tzdata==2024.1
 visitor==0.1.3
 Werkzeug==3.0.3
 WTForms==3.1.2
+WTForms-SQLAlchemy==0.4.1
